--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 8 Mar 2007
+  Last Modified: 11 Mar 2007
   Number: 2
-  Version: 93
+  Version: 94
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1391,8 +1391,8 @@ The following pseudo-package names are reserved in the first position:
     OUR         # Package variables declared in the current package
     GLOBAL      # Builtin variables and functions
     OUTER       # Lexical variables declared in the outer scope
-    CALLER      # Contextual variables in the caller's scope
-    CONTEXT     # Contextual variables in any caller's scope
+    CALLER      # Contextual variables in the immediate caller's scope
+    CONTEXT     # Contextual variables in any context's scope
     SUPER       # Package variables declared in inherited classes
     COMPILING   # Lexical variables in the scope being compiled
 
@@ -1530,7 +1530,7 @@ applies only to called subroutines.
 
 The C<CONTEXT> pseudo-package is just like C<CALLER> except that
 it scans outward through all dynamic scopes until it finds a
-contextual variable of that name in that caller's lexical scope.
+contextual variable of that name in that context's lexical scope.
 (Use of C<$+FOO> is equivalent to CONTEXT::<$FOO> or $CONTEXT::FOO.)
 If after scanning all the lexical scopes of each dynamic scope,
 there is no variable of that name, it looks in the C<*> package.
@@ -1538,7 +1538,7 @@ If there is no variable in the C<*> package and the variable is
 a scalar, it then looks in C<%*ENV> for the identifier of the variable,
 that is, in the environment variables passed to program.  If the
 value is not found there, it returns failure.  Note that C<$+_> is
-always the same as CALLER::<$_> since all callers have a C<$_> that
+always the same as CALLER::<$_> since all contexts have a C<$_> that
 is automatically considered environmental.  Note also that C<CONTEXT>
 and C<$+> always skip the current scope, since you can always name
 the variable directly without the C<CONTEXT> or C<+> if it's been
